--- a/now.json
+++ b/now.json
@@ -2,10 +2,12 @@
   "version": 2,
   "alias": "postybirb-error-server",
   "name": "postybirb-error-server",
-  "builds": [{
-    "src": "index.js",
-    "use": "@now/node"
-  }],
+  "builds": [
+    { "src": "index.js", "use": "@now/node-server" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/index.js" }
+  ],
   "regions": ["sfo1"],
   "public": false
 }
