--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "deploy": "now && now alias",
-    "start": "node ."
+    "start": "micro index.js"
   },
   "repository": {
     "type": "git",
@@ -22,9 +22,8 @@
   },
   "homepage": "https://github.com/mvdicarlo/postybirb-error-server#readme",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4",
-    "express-rate-limit": "^3.3.2",
+    "micro": "^9.3.4",
+    "microrouter": "^3.1.3",
     "winston": "^3.1.0"
   }
 }
